tests/error/ptr_assign_other.gw
// [contains] can't assign member function to member function pointer of an other class
 class C { typedef void (test)(); }
class D { function void test(){} }
C c;
D d;
d.test @=> c.test;
